--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
   <link rel="icon" type="image/x-icon" href="cropped-logosoul.png">
 </head>
-<body>
+<body style="width: 100vw;">
   <app-root></app-root>
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
